--- a/Segmenting and Clustering Neighborhood.ipynb
+++ b/Segmenting and Clustering Neighborhood.ipynb
@@ -23,7 +23,6 @@
    ],
    "source": [
     "#Import Beautiful Soup, lxml, requests to scrap data from Toronto Neighborhood in Wikipedia\n",
-    "!pip install wikipedia\n",
     "import wikipedia as wp\n",
     "import numpy as np # library to handle data in a vectorized manner\n",
     "\n",
@@ -183,6 +182,126 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Add longitude and lattitute to Data Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern, Rouge</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge Hill, Port Union, Highland Creek</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode      Borough                            Neighborhood   Latitude  \\\n",
+       "0      M1B  Scarborough                          Malvern, Rouge  43.806686   \n",
+       "1      M1C  Scarborough  Rouge Hill, Port Union, Highland Creek  43.784535   \n",
+       "2      M1E  Scarborough       Guildwood, Morningside, West Hill  43.763573   \n",
+       "3      M1G  Scarborough                                  Woburn  43.770992   \n",
+       "4      M1H  Scarborough                               Cedarbrae  43.773136   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.194353  \n",
+       "1 -79.160497  \n",
+       "2 -79.188711  \n",
+       "3 -79.216917  \n",
+       "4 -79.239476  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import io\n",
+    "import requests\n",
+    "url=\"https://cocl.us/Geospatial_data\"\n",
+    "s=requests.get(url).content\n",
+    "c=pd.read_csv(io.StringIO(s.decode('utf-8')))\n",
+    "\n",
+    "dfc = df.join(c.set_index('Postal Code'), on='Postcode')\n",
+    "dfc.head()"
    ]
   },
   {
